base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    app: helloworld
  annotations:
    cloud.google.com/app-protocols: '{"http-port":"HTTP"}'
spec:
  type: NodePort
  selector:
    app: helloworld
  ports:
    - name: http-port
      port: 80
      targetPort: 3000
